correct API path

--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -65,7 +65,7 @@ functions:
     events:
     - http:
         method: GET
-        path: user
+        path: user/all
         cors: true
   
   # Currency
