--- a/FSharp project/MongoRepository/MongoRepository.fsproj
+++ b/FSharp project/MongoRepository/MongoRepository.fsproj
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Extensions.fs" />
     <Compile Include="RepositoryBase.fs" />
     <Compile Include="UserRepository.fs" />
+    <Compile Include="SessionRepository.fs" />
     <Compile Include="CurrencyRepository.fs" />
   </ItemGroup>
 
