correct functio endpoint

--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -101,8 +101,8 @@ functions:
       <<: *package
     events:
     - http:
-        method: GET
-        path: currency/all
+        method: POST
+        path: currency
         cors: true
 
   CurrencySingle:
