add new entities

--- a/FSharp project/Core/Core.fsproj
+++ b/FSharp project/Core/Core.fsproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Include="entities.fs" />
+    <Compile Include="projections.fs" />
     <Compile Include="repositories.fs" />
   </ItemGroup>
 
