--- a/FSharp project/MongoRepository/MongoRepository.fsproj
+++ b/FSharp project/MongoRepository/MongoRepository.fsproj
@@ -13,6 +13,7 @@
     <Compile Include="UserRepository.fs" />
     <Compile Include="SessionRepository.fs" />
     <Compile Include="CurrencyRepository.fs" />
+    <Compile Include="CompanyRepository.fs" />
   </ItemGroup>
 
   <ItemGroup>
