--- a/FSharp project/AwsLambda/AWS Lambda.fsproj
+++ b/FSharp project/AwsLambda/AWS Lambda.fsproj
@@ -19,6 +19,7 @@
     <Compile Include="Functions\Function Base.fs" />
     <Compile Include="Functions\User Functions.fs" />
     <Compile Include="Functions\Currency Functions.fs" />
+    <Compile Include="Functions\Company Functions.fs" />
   </ItemGroup>
 
   <ItemGroup>
