implement CompanyRepository and custom serializer

--- a/FSharp project/IntegrationTests/IntegrationTests.fsproj
+++ b/FSharp project/IntegrationTests/IntegrationTests.fsproj
@@ -13,6 +13,7 @@
     <Compile Include="configuration.fs" />
     <Compile Include="UserRepository.tests.fs" />
     <Compile Include="CurrencyRepository.tests.fs" />
+    <Compile Include="CompanyRepository.tests.fs" />
   </ItemGroup>
 
   <ItemGroup>
