--- a/FSharp project/MongoRepository/MongoRepository.fsproj
+++ b/FSharp project/MongoRepository/MongoRepository.fsproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Serializers\CompanyTypeSerializer.fs" />
     <Compile Include="Extensions.fs" />
     <Compile Include="RepositoryBase.fs" />
     <Compile Include="UserRepository.fs" />
