--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -20,6 +20,7 @@ provider:
     functionCurrencyPrefix: "Portfolio.Api::Portfolio.Api.Functions.Currency"  # Assembly::Namespace prefix, concatenate .Class::Method
     userFunctions: "Portfolio.Api::Portfolio.Api.Functions.UserFunctions"  # Assembly::Namespace prefix, concatenate .Class::Method
     currencyFunctions: "Portfolio.Api::Portfolio.Api.Functions.CurrencyFunctions"  # Assembly::Namespace prefix, concatenate .Class::Method
+    companyFunctions: "Portfolio.Api::Portfolio.Api.Functions.CompanyFunctions"  # Assembly::Namespace prefix, concatenate .Class::Method
 
 package:
   individually: true
@@ -130,4 +131,15 @@ functions:
     - http:
         method: GET
         path: currency/all
+        cors: true
+
+  # Company
+  CompanyCreate:
+    handler: ${self:provider.environment.companyFunctions}::Create  
+    package: 
+      <<: *package
+    events:
+    - http:
+        method: POST
+        path: company
         cors: true
