create unit tests class

--- a/FSharp project/UnitTests/UnitTests.fsproj
+++ b/FSharp project/UnitTests/UnitTests.fsproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Compile Include="Core\entities.tests.fs" />
+    <Compile Include="Core\Logic\CompanyLogic.tests.fs" />
     <Compile Include="Core\Logic\BalanceLogic.test.fs" />
     <Compile Include="Functions\User Functions.tests.fs" />
     <Compile Include="Functions\Company Functions.tests.fs" />
