--- a/FSharp project/Core/Core.fsproj
+++ b/FSharp project/Core/Core.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="entities.fs" />
     <Compile Include="projections.fs" />
     <Compile Include="repositories.fs" />
+    <Compile Include="Logic\helper.fs" />
     <Compile Include="Logic\CompanyLogic.fs" />
     <Compile Include="Logic\BalanceLogic.fs" />
   </ItemGroup>
