--- a/FSharp project/MongoRepository/MongoRepository.fsproj
+++ b/FSharp project/MongoRepository/MongoRepository.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="SessionRepository.fs" />
     <Compile Include="CurrencyRepository.fs" />
     <Compile Include="CompanyRepository.fs" />
+    <Compile Include="FundRepository.fs" />
   </ItemGroup>
 
   <ItemGroup>
