--- a/FSharp project/AwsLambda/AWS Lambda.fsproj
+++ b/FSharp project/AwsLambda/AWS Lambda.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="Functions\User Functions.fs" />
     <Compile Include="Functions\Currency Functions.fs" />
     <Compile Include="Functions\Company Functions.fs" />
+    <Compile Include="Functions\Balance Functions.fs" />
   </ItemGroup>
 
   <ItemGroup>
