--- a/FSharp project/UnitTests/UnitTests.fsproj
+++ b/FSharp project/UnitTests/UnitTests.fsproj
@@ -14,6 +14,7 @@
     <Compile Include="Core\Logic\BalanceLogic.test.fs" />
     <Compile Include="Functions\User Functions.tests.fs" />
     <Compile Include="Functions\Company Functions.tests.fs" />
+    <Compile Include="Functions\Balance Functions.tests.fs" />
   </ItemGroup>
 
   <ItemGroup>
