--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -26,6 +26,13 @@ provider:
 package:
   individually: true
 
+resources:
+  Resources:
+    ApiGatewayMethodV1UsersUseridVarTestPost: 
+      Type: "AWS::ApiGateway::Method"
+      Properties:
+        AuthorizationType: "AWS_IAM"
+
 functions:
   # User
   UserCreate:
@@ -47,8 +54,6 @@ functions:
         method: GET
         path: user/{email}
         cors: true
-
-        authorization_type: "AWS_IAM"
   
   UserUpdate:
     handler: ${self:provider.environment.userFunctions}::Update 
@@ -189,7 +194,6 @@ functions:
         method: GET
         path: company/all
         cors: true
-        authorizationType: "AWS_IAM"
 
   # Balance
   BalanceGet:
