--- a/FSharp project/SmokeTests/SmokeTests.fsproj
+++ b/FSharp project/SmokeTests/SmokeTests.fsproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
     <GenerateProgramFile>false</GenerateProgramFile>
+    <UserSecretsId>AWS.Portfolio</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
