set private:true on company/all

--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -187,6 +187,7 @@ functions:
         method: GET
         path: company/all
         cors: true
+        private: true
 
   # Balance
   BalanceGet:
