--- a/FSharp project/SmokeTests/SmokeTests.fsproj
+++ b/FSharp project/SmokeTests/SmokeTests.fsproj
@@ -28,6 +28,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core\Core.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="5.0.2" />
   </ItemGroup>
 
