add authorizer: aws_iam to curremcy/all

--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -133,6 +133,7 @@ functions:
         method: GET
         path: currency/all
         cors: true
+        authorizer: aws_iam
 
   # Company
   CompanyCreate:
