--- a/FSharp project/Core/Core.fsproj
+++ b/FSharp project/Core/Core.fsproj
@@ -12,7 +12,9 @@
     <Compile Include="projections.fs" />
     <Compile Include="repositories.fs" />
     <Compile Include="Logic\error messages.fs" />
+    <Compile Include="Logic\request validator.fs" />
     <Compile Include="Logic\helper.fs" />
+    <Compile Include="Logic\LogicBase.fs" />
     <Compile Include="Logic\CompanyLogic.fs" />
     <Compile Include="Logic\BalanceLogic.fs" />
   </ItemGroup>
