--- a/FSharp project/UnitTests/UnitTests.fsproj
+++ b/FSharp project/UnitTests/UnitTests.fsproj
@@ -10,12 +10,16 @@
 
   <ItemGroup>
     <Compile Include="Core\entities.tests.fs" />
+    <None Include="Core\Logic\match spike.fsx" />
+    <Compile Include="Core\Logic\match helper.fs" />
     <Compile Include="Core\Logic\CompanyLogic.tests.fs" />
     <Compile Include="Core\Logic\BalanceLogic.test.fs" />
     <Compile Include="Functions\User Functions.tests.fs" />
     <Compile Include="Functions\Company Functions.tests.fs" />
     <Compile Include="Functions\Balance Functions.tests.fs" />
   </ItemGroup>
+
+  <ItemGroup />
 
   <ItemGroup>
     <PackageReference Include="Foq" Version="1.8.0" />
