--- a/FSharp project/IntegrationTests/IntegrationTests.fsproj
+++ b/FSharp project/IntegrationTests/IntegrationTests.fsproj
@@ -17,6 +17,7 @@
     <Compile Include="CompanyRepository.tests.fs" />
     <Compile Include="FundRepository.tests.fs" />
     <Compile Include="FundRepository.regressiontests.fs" />
+    <Compile Include="CompanyLogic.test.fs" />
   </ItemGroup>
 
   <ItemGroup>
