Add CurrencyLogic type. Implement ExistsWithCode and ExistsWithName

--- a/FSharp project/Core/Core.fsproj
+++ b/FSharp project/Core/Core.fsproj
@@ -13,6 +13,7 @@
     <Compile Include="repositories.fs" />
     <Compile Include="Logic\error messages.fs" />
     <Compile Include="Logic\helper.fs" />
+    <Compile Include="Logic\CurrencyLogic.fs" />
     <Compile Include="Logic\CompanyLogic.fs" />
     <Compile Include="Logic\BalanceLogic.fs" />
   </ItemGroup>
