--- a/FSharp project/UnitTests/UnitTests.fsproj
+++ b/FSharp project/UnitTests/UnitTests.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Portfolio.UnitTests</AssemblyName>
     <RootNamespace>UnitTests</RootNamespace>
     <IsPackable>false</IsPackable>
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Compile Include="Core\entities.tests.fs" />
     <Compile Include="Core\Logic\match helper.fs" />
+    <Compile Include="Core\Logic\CurrencyLogic.tests.fs" />
     <Compile Include="Core\Logic\CompanyLogic.tests.fs" />
     <Compile Include="Core\Logic\BalanceLogic.test.fs" />
     <Compile Include="Functions\User Functions.tests.fs" />
