correct message. Add action for PR

--- a/FSharp project/UnitTests/UnitTests.fsproj
+++ b/FSharp project/UnitTests/UnitTests.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="Core\Logic\CompanyLogic.tests.fs" />
     <Compile Include="Core\Logic\BalanceLogic.test.fs" />
     <Compile Include="Functions\User Functions.tests.fs" />
+    <Compile Include="Functions\Currency Functions.tests.fs" />
     <Compile Include="Functions\Company Functions.tests.fs" />
     <Compile Include="Functions\Balance Functions.tests.fs" />
   </ItemGroup>
