replace double quote with single

--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Integration Tests
       id: integration-tests
-      if: github.event.action == 'labeled' && github.event.label.name == "ready"
+      if: github.event.action == 'labeled' && github.event.label.name == 'ready'
       #run: dotnet test "FSharp project/UnitTests/UnitTests.fsproj" -c Release --no-build --filter "TestCategory!=SKIP_ON_DEPLOY"
       run: echo::integration tests
 
