--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -2,6 +2,7 @@ name: Pull Request Checks
 
 on: 
   push:
+    branches: [master]
   pull_request:
     types: [opened, synchronize, reopened, labeled]
   
