--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -14,7 +14,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
     - name: Buid VS solution
       id: build
       run: dotnet build "FSharp project/Portfolio AWS API.sln" -c RELEASE
@@ -26,15 +25,21 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
     - name: Unit Tests
       id: unit-tests
       run: dotnet test "FSharp project/UnitTests/UnitTests.fsproj" -c Release --no-build --filter "TestCategory!=SKIP_ON_DEPLOY"
 
+  integration-tests:
+    name: Integration Tests
+    needs: [build, unit-tests]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Integration Tests
       id: integration-tests
       if: github.event.action == 'labeled' && github.event.label.name == 'pr:ready'
-      #run: dotnet test "FSharp project/UnitTests/UnitTests.fsproj" -c Release --no-build --filter "TestCategory!=SKIP_ON_DEPLOY"
+      #run: dotnet test "FSharp project/IntegrationTests/IntegrationTests.fsproj" -c Release --no-build --filter "TestCategory!=SKIP_ON_DEPLOY"
       run: echo::integration tests
 
 
