remove trigger on push

--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -31,7 +31,7 @@ jobs:
 
   integration-tests:
     name: Integration Tests
-    needs: [build, unit-tests]
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
