--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -2,19 +2,43 @@ name: Pull Request Checks
 
 on: 
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize, reopened, labeled]
   
 jobs:
-  check-build:
-    name: check build
+
+  build:
+    name: Build
     runs-on: ubuntu-latest
-    #environment: production
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
     - name: Buid VS solution
+      id: build
       run: dotnet build "FSharp project/Portfolio AWS API.sln" -c RELEASE
 
+  unit-tests:
+    name: Unit Tests
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Unit Tests
+      id: unit-tests
       run: dotnet test "FSharp project/UnitTests/UnitTests.fsproj" -c Release --no-build --filter "TestCategory!=SKIP_ON_DEPLOY"
+
+  integration-tests:
+    name: Integration Tests
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Integration Tests
+      id: integration-tests
+      if: github.event.action == 'labeled' && github.event.label.name == 'pr:ready'
+      run: dotnet test "FSharp project/IntegrationTests/IntegrationTests.fsproj" -c Release --no-build --filter "TestCategory!=SKIP_ON_DEPLOY"
+
+
+
+
