--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -165,7 +165,7 @@ functions:
 
   # Balance
   BalanceGet:
-    name: "GET Balance"
+    #name: "GET Balance"
     handler: ${self:provider.environment.balanceFunctions}::Get
     package: 
       <<: *package
