increase timeout and memory size of lambda function

--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -169,7 +169,8 @@ functions:
     handler: ${self:provider.environment.balanceFunctions}::Get
     package: 
       <<: *package
-    timeout: 20
+    timeout: 30
+    memorySize: 1024
     events:
     - http:
         method: GET
