--- a/FSharp project/IntegrationTests/IntegrationTests.fsproj
+++ b/FSharp project/IntegrationTests/IntegrationTests.fsproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core\Core.fsproj" />
     <ProjectReference Include="..\MongoRepository\MongoRepository.fsproj" />
   </ItemGroup>
 
