--- a/.github/workflows/deploy fsharp.yml
+++ b/.github/workflows/deploy fsharp.yml
@@ -1,3 +1,5 @@
+# this workflow is used to deploy F# Lambda functions
+
 name: Deploy F# API
 # Severless syntax: https://www.serverless.com/framework/docs/providers/aws/guide/serverless.yml/
 
