--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -1,4 +1,6 @@
 # This workflow is used to chech the code changes in pull requests
+# This workflow has to fail if tests fail
+
 
 name: Pull Request Checks
 
