run tests if not draft

--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -21,10 +21,11 @@ jobs:
   unit-tests:
     name: Unit Tests
     needs: [build]
+    if: ! contains(github.event.pull_request.labels.*.name, 'pr:draft')
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Unit Tests
       id: unit-tests
       run: dotnet test "FSharp project/UnitTests/UnitTests.fsproj" -c Release --no-build --filter "TestCategory!=SKIP_ON_DEPLOY"
@@ -32,15 +33,11 @@ jobs:
   integration-tests:
     name: Integration Tests
     needs: [build]
+    if: ! contains(github.event.pull_request.labels.*.name, 'pr:draft')
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Integration Tests
-      id: integration-tests
-      if: github.event.action == 'labeled' && github.event.label.name == 'pr:ready'
+      id: integration-tests      
       run: dotnet test "FSharp project/IntegrationTests/IntegrationTests.fsproj" -c Release --no-build --filter "TestCategory!=SKIP_ON_DEPLOY"
-
-
-
-
