--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -21,7 +21,7 @@ jobs:
   unit-tests:
     name: Unit Tests
     needs: [build]
-    if: ! contains(github.event.pull_request.labels.*.name, 'pr:draft')
+    if: false == contains(github.event.pull_request.labels.*.name, 'pr:draft')
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -33,7 +33,7 @@ jobs:
   integration-tests:
     name: Integration Tests
     needs: [build]
-    if: ! contains(github.event.pull_request.labels.*.name, 'pr:draft')
+    if: ${{ ! contains(github.event.pull_request.labels.*.name, 'pr:draft') }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
