--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Unit Tests
       id: unit-tests
-      run: dotnet test "FSharp project/UnitTests/UnitTests.fsproj" -c Release --no-build --filter "TestCategory!=SKIP_ON_DEPLOY"
+      run: dotnet test "FSharp project/UnitTests/UnitTests.fsproj" -c Release --filter "TestCategory!=SKIP_ON_DEPLOY"
 
   integration-tests:
     name: Integration Tests
@@ -40,4 +40,4 @@ jobs:
       uses: actions/checkout@v3
     - name: Integration Tests
       id: integration-tests      
-      run: dotnet test "FSharp project/IntegrationTests/IntegrationTests.fsproj" -c Release --no-build --filter "TestCategory!=SKIP_ON_DEPLOY"
+      run: dotnet test "FSharp project/IntegrationTests/IntegrationTests.fsproj" -c Release --filter "TestCategory!=SKIP_ON_DEPLOY"
